fixed minor layout shifts

--- a/static/css/views/curriculum.css
+++ b/static/css/views/curriculum.css
@@ -32,7 +32,7 @@
     font-size: 50px;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
     .curriculum-view {
         flex-direction: column !important;
         align-items: center;
